...
"Address.Bar.v99" = "Address Bar";

/* Used as a button label for crash dialog prompt */
"Always Send" = "Always Send";

/* Tile title for Amazon */
"Amazon" = "Amazon";

/* Authentication prompt title */
"Authentication required" = "Authentication required";

/* Accessibility label for the Back button in the tab toolbar. */
"Back" = "Back";
...
"ExternalLink.AppStore.ConfirmationTitle" = "Open this link in the App Store?";

/* Question shown to user when tapping an SMS or MailTo link that opens the external app for those. */
"ExternalLink.AppStore.GenericConfirmationTitle" = "Open this link in external app?";

/* Tile title for Facebook */
"Facebook" = "Facebook";

/* Title for firefox about:home page in tab history list */
"Firefox.HomePage.Title" = "Firefox Home Page";

/* A button at bottom of the Firefox homepage that, when clicked, takes users straight to the settings options, where they can customize the Firefox Home page */
"FirefoxHome.CustomizeHomeButton.Title" = "Customize Homepage";
...
"HomePanel.ContextMenu.Bookmark" = "Bookmark";

/* The title for the Delete from History context menu action for sites in Home Panels */
"HomePanel.ContextMenu.DeleteFromHistory" = "Delete from History";

/* The title for the Open in New Private Tab context menu action for sites in Home Panels */
"HomePanel.ContextMenu.OpenInNewPrivateTab.v101" = "Open in a Private Tab";

/* The title for the Open in New Tab context menu action for sites in Home Panels */
"HomePanel.ContextMenu.OpenInNewTab" = "Open in New Tab";

/* The title for the Remove context menu action for sites in Home Panels */
"HomePanel.ContextMenu.Remove" = "Remove";
...
"Tab.ShowTabTray.KeyCodeTitle" = "Show All Tabs";

/* Message spoken by VoiceOver saying the range of tabs that are currently visible in Tabs Tray, along with the total number of tabs. E.g. \"Tabs 8 to 10 of 15\" says tabs 8, 9 and 10 are visible, out of 15 tabs total. */
"Tabs %@ to %@ of %@" = "Tabs %1$@ to %2$@ of %3$@";

/* Accessibility label for the Tabs Tray view. */
"Tabs Tray" = "Tabs Tray";

/* The button to undo the delete all tabs */
"Tabs.DeleteAllUndo.Button" = "Undo";

/* The label indicating that all the tabs were closed */
"Tabs.DeleteAllUndo.Title" = "%d tab(s) closed";
...
"TranslationToastHandler.PromptTranslate.OK" = "Yes";

/* Prompt for translation. The first parameter is the language the page is in. The second parameter is the name of our local language. The third is the name of the service. */
"TranslationToastHandler.PromptTranslate.Title" = "This page appears to be in %1$@. Translate to %2$@ with %3$@?";

/* Tile title for Twitter */
"Twitter" = "Twitter";

/* The menu item that pastes the current contents of the clipboard into the URL bar and navigates to the page */
"UIMenuItem.PasteGo" = "Paste & Go";

/* Search in New Tab Text selection menu item */
"UIMenuItem.SearchWithFirefox" = "Search with Firefox";
...
"Welcome to your Reading List" = "Welcome to your Reading List";

/* Restore Tabs Prompt Title */
"Well, this is embarrassing." = "Well, this is embarrassing.";

/* Tile title for Wikipedia */
"Wikipedia" = "Wikipedia";

/* Relative date for yesterday. */
"yesterday" = "yesterday";

/* History tableview section header */
"Yesterday" = "Yesterday";
...
"You don’t have any tabs open in Firefox on your other devices." = "You don’t have any tabs open in Firefox on your other devices.";

/* Your Rights settings section title */
"Your Rights" = "Your Rights";

/* Tile title for YouTube */
"YouTube" = "YouTube";


